# jude

./: .gitignore  data_maker.py  env.yml  pyproject.toml  readme.md
jude/: manipulator.py  signal_proc.py  stat_maker.py
scripts/ws8/: ws8_data.py
