[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jude"
version = "0.0.1"
license = "MIT"
description = "Jose's Utility for Data Exploration."
authors = [
	"Jose Mendez <joseamendez99@gmail.com>",
]
maintainers = [
	"Jose Mendez <joseamendez99@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/jamendez99/jude"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.23"
bottleneck = "^1.3"
pandas = "^2.2"

